fix: zoomable image overflow

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -79,8 +79,7 @@ article {
 
   a[data-pswp-src] {
     display: block;
-    max-width: 75%;
-    max-height: 40rem;
+    overflow: hidden;
     width: fit-content;
     height: fit-content;
     position: relative;
@@ -88,8 +87,12 @@ article {
     margin-top: calc(var(--spacing, 0.25rem) * 4);
     margin-bottom: calc(var(--spacing, 0.25rem) * 6);
     cursor: zoom-in;
+
+    @apply xs:max-w-4/5 max-w-full sm:max-w-3/4 md:max-w-3/5;
+
     img {
       border-radius: var(--radius-md, 0.375rem);
+      max-height: 40rem;
     }
   }
 
